# Synthwave

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Synthwave.cpp  Synthwave.h
Editor/src/: EditorItems.hpp  RagdollBuilder.hpp  SceneTree.hpp  editor.hpp  editorMode.hpp
assets/: Box.glb  capsule4.glb  enemy1.glb  mtn.glb  robot4Wheels.glb
assets/Editor/: camera.glb
assets/ragdolls/: Ragdoll1.bof
core/src/: Entity.hpp  EntityFactory.hpp  common.hpp  components.hpp  pch.h  player.hpp
core/src/AssetLibrary/: AssetLibrary.hpp
core/src/InputSystem/: InputManager.hpp
core/src/Logger/: Logger.ixx
core/src/MenuSystem/: MenuFunctions.hpp  MenuSystem.hpp
core/src/SDL/: Window.hpp
core/src/Serialization/: serialization.hpp
core/src/character/: actor.hpp
core/src/ecs/: GraphicsComponents.hpp  RegisterReflectionData.hpp  archetypes.hpp  components.hpp  eventComponents.hpp
core/src/physics/: AssetStream.hpp  debugRenderer.hpp  physics.hpp  physicsUtil.hpp  ragdoll.hpp
core/src/renderer/: Camera.hpp  CameraManager.hpp  GeometryPool.hpp  Grid.hpp  Material.hpp  Mesh.hpp  Model.hpp  RendererConfig.hpp  Shader.hpp  computePipeline.hpp  pipeline.hpp  renderUtil.hpp  renderer.hpp  window.hpp
core/src/renderer/Materials/: Material.hpp
core/src/renderer/PipelineLibrary/: PipelineLibrary.hpp
core/src/renderer/ShaderCompilation/: ShaderCompiler.ixx  ShaderReflection.hpp
core/src/renderer/ShaderComplation/: ShaderCompiler.ixx
core/src/renderer/UI/: UserInterface.hpp
core/src/renderer/overlay/: overlay.hpp
core/src/renderer/shaders/: bindlessTextureShader.fs  bindlessTextureShader.vs  grid2Shader.fs  grid2Shader.vs  gridShader.fs  mtnShader.fs  mtnShader.vs  shader2.fs  shader2.vs  shader3.fs  simpleShader.fs  simpleShader.vs  wireframeShader.fs  wireframeShader.vs
core/src/renderer/shaders/glsl/: grid2Shader.vs  gridShader.vs  shader3.vs  wireframeShader.gs
core/src/renderer/shaders/physicsDebug/: lineShader.fs  lineShader.vs  triangleShader.fs  triangleShader.vs
core/src/renderer/shaders/shadersDSA/: simpleShader.fs
core/src/renderer/shaders/slang/: EntID.slang  Grid-Wireframe.slang  Grid.slang  Line.slang  OutlineCompute.slang  Phong.slang  Physics.slang  Shader_Types.config.slang  Solid-Wireframe.slang  Structs.config.slang  Unlit.slang  Wireframe-non-instanced.slang  Wireframe2.slang  gridShader.slang  lineShader.slang  outlineShader.slang  physicsRender.slang  shaders.slang  solidColor.slang  textShader.slang  wireframe.slang
core/src/renderer/shaders/textShaders/: textShader.fs  textShader.vs
core/src/renderer/text/: freeType.hpp  textRenderer.hpp
core/src/state/: PlayerState.hpp  stateManager.hpp
core/src/time/: timeManager.hpp
core/src/util/: memoryTracker.hpp  serializationHelpers.hpp  util.hpp
game/src/: actorBehaviors.hpp  gameObjects.hpp  hud.hpp  menu.hpp  sensorBehaviors.hpp  userSettings.hpp
games/CrashTheSim/src/: GameData.json
